# GitAnalyze

./: .env.example  .gitignore  README.md  package-lock.json  package.json  prisma.config.ts  pyproject.toml
.github/: FUNDING.yml
public/: _offline.html  manifest.json
public/data/: top-repos.json
rag_service/gitpulse_rag/: __init__.py  app.py  config.py  file_filters.py  gemini_client.py  github_client.py  models.py  pipeline.py  prompt_builder.py  tokens.py
scripts/: fetch-top-repos.ts  fetch-trending-repos.mjs  prisma-deploy.mjs
src/: proxy.ts
src/app/: HomeClient.tsx  actions.admin.test.ts  actions.scan-policy.test.ts  actions.ts  globals.css  layout.tsx  sitemap.test.ts  sitemap.ts
src/app/admin/: layout.tsx  page.tsx
src/app/blog/: page.tsx
src/app/chat/: page.tsx
src/app/components/: json-ld.tsx
src/app/dashboard/: layout.tsx
src/components/: AuthButton.tsx  BentoFeatures.tsx  CAGBadge.tsx  CAGComparison.tsx  ChatInput.tsx  ChatInterface.tsx  CodeIcon.tsx  CopyBadge.tsx  DeveloperCard.tsx  FilePreview.tsx  Footer.tsx  GitHubBadge.tsx  InteractiveDemo.tsx  Mermaid.tsx  ProfileChatInterface.tsx  ProfileLoader.tsx  PublicStats.tsx  ReasoningBlock.tsx  RepoCard.tsx  RepoLayout.tsx  RepoLoader.tsx  RepoSidebar.tsx  SearchModal.tsx  SecurityBanner.tsx  TrustedByMarquee.tsx  WallOfLove.tsx
src/lib/: ai-client.ts  auth.config.ts  blog-data.ts  chat-types.ts  gemini-security.ts  gemini.ts  github.ts  mermaid-init.ts  prompt-builder.ts  security-scan-config.ts  site-url.ts  storage.ts
src/lib/emails/: mailer.ts  (+1 more)
tests/: test_rag_pipeline.py
(+40 files in other folders)
